unpackaged/main/default/objects/ServiceAppointment/fields/KMI__c.field-meta.xml
<CustomField>
    <fullName>KMI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Keep Member Informed</description>
    <label>KMI</label>
    <type>Checkbox</type>
</CustomField>