unpackaged/main/default/objects/ServiceAppointment/fields/Landline_Facility_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Landline_Facility_Contacted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Landline Facility Contacted</label>
    <type>Checkbox</type>
</CustomField>