unpackaged/main/default/objects/ServiceAppointment/fields/Landline_Resource__c.field-meta.xml
<CustomField>
    <fullName>Landline_Resource__c</fullName>
    <formula>ServiceTerritory.IsLandline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Landline Resource</label>
    <type>Checkbox</type>
</CustomField>