unpackaged/main/default/objects/ServiceAppointment/fields/Landmark_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>Landmark_Lightbox__c</fullName>
    <formula>Landmark__c</formula>
    <label>Landmark</label>
    <type>Text</type>
</CustomField>