unpackaged/main/default/objects/ServiceAppointment/fields/Late_Delay_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>Late_Delay_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Late/Delay Violation Check</label>
    <type>Checkbox</type>
</CustomField>