unpackaged/main/default/objects/ServiceAppointment/fields/Legacy_Priority_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Priority_Code__c</fullName>
    <formula>Work_Order__r.Legacy_Priority_Code__c</formula>
    <label>Legacy Priority Code</label>
    <type>Text</type>
</CustomField>