unpackaged/main/default/objects/ServiceAppointment/fields/Manual_Override_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Power_of_1__c</fullName>
    <formula>IF(NOT(ISBLANK(Manual_Override_Reason__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Override Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>