unpackaged/main/default/objects/ServiceAppointment/fields/Manual_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Reason__c</fullName>
    <description>Required when a dispatcher attempts to change an appointment that is already on the Gantt (has a Scheduled Start Time).</description>
    <label>Manual Override Reason</label>
    <type>TextArea</type>
</CustomField>