unpackaged/main/default/objects/ServiceAppointment/fields/Manual_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Manual_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Schedule</label>
    <type>Checkbox</type>
</CustomField>