unpackaged/main/default/objects/ServiceAppointment/fields/Member_Arrival_Window__c.field-meta.xml
<CustomField>
    <fullName>Member_Arrival_Window__c</fullName>
    <formula>(BLANKVALUE( SchedStartTime,  PTA__c)) - (VALUE(MID( Work_Order__r.Timezone_Offset__c,5,2))/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Arrival Window</label>
    <type>DateTime</type>
</CustomField>