unpackaged/main/default/objects/ServiceAppointment/fields/Member_Benefit_Level__c.field-meta.xml
<CustomField>
    <fullName>Member_Benefit_Level__c</fullName>
    <formula>TEXT(Contact.Membership_Level__c)</formula>
    <label>Member Benefit Level</label>
    <type>Text</type>
</CustomField>