unpackaged/main/default/objects/ServiceAppointment/fields/Member_Current_Time__c.field-meta.xml
<CustomField>
    <fullName>Member_Current_Time__c</fullName>
    <formula>(NOW()) - (VALUE(MID(Work_Order__r.Timezone_Offset__c ,5,2))/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Current Time</label>
    <type>DateTime</type>
</CustomField>