unpackaged/main/default/objects/ServiceAppointment/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <formula>Contact.Member_Card_Num__c</formula>
    <label>Member Number</label>
    <type>Text</type>
</CustomField>