unpackaged/main/default/objects/ServiceAppointment/fields/Member_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Member_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true if the member gave a preference for an appointment time</description>
    <label>Member Scheduled</label>
    <type>Checkbox</type>
</CustomField>