unpackaged/main/default/objects/ServiceAppointment/fields/Member_Scheduled_Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Member_Scheduled_Appointment_Time__c</fullName>
    <formula>IF(Member_Scheduled__c = TRUE ,  EarliestStartTime , null)</formula>
    <label>Member Scheduled Appointment Time</label>
    <type>DateTime</type>
</CustomField>