unpackaged/main/default/objects/ServiceAppointment/fields/Member_Scheduled_Icon_del__c.field-meta.xml
<CustomField>
    <fullName>Member_Scheduled_Icon_del__c</fullName>
    <description>Appointment Icon</description>
    <formula>IF(Member_Scheduled__c=TRUE, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Appointment</inlineHelpText>
    <label>Member Scheduled</label>
    <type>Text</type>
</CustomField>