unpackaged/main/default/objects/ServiceAppointment/fields/Non_Expired_SMS_counter__c.field-meta.xml
<CustomField>
    <fullName>Non_Expired_SMS_counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To Store number of Non Expired SMS sent</description>
    <label>Non Expired SMS counter</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>