unpackaged/main/default/objects/ServiceAppointment/fields/Not_Pinned__c.field-meta.xml
<CustomField>
    <fullName>Not_Pinned__c</fullName>
    <formula>IF(FSL__Pinned__c, false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Pinned</label>
    <type>Checkbox</type>
</CustomField>