unpackaged/main/default/objects/ServiceAppointment/fields/On_Location_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>On_Location_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Location Violation Check</label>
    <type>Checkbox</type>
</CustomField>