unpackaged/main/default/objects/ServiceAppointment/fields/Original_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>Original_Scheduled_Start__c</fullName>
    <label>Original Scheduled Start</label>
    <type>DateTime</type>
</CustomField>