unpackaged/main/default/objects/ServiceAppointment/fields/Original_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Appointments (Original Service Territory)</relationshipLabel>
    <relationshipName>Service_Appointments1</relationshipName>
    <type>Lookup</type>
</CustomField>