unpackaged/main/default/objects/ServiceAppointment/fields/Overridden_By__c.field-meta.xml
<CustomField>
    <fullName>Overridden_By__c</fullName>
    <label>Overridden By</label>
    <length>250</length>
    <type>Text</type>
</CustomField>