unpackaged/main/default/objects/ServiceAppointment/fields/Override_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>Override_Power_of_1__c</fullName>
    <formula>IF( Schedule_Overriden__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Power of 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>