unpackaged/main/default/objects/ServiceAppointment/fields/Parent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory__c</fullName>
    <description>Name of the Parent Territory</description>
    <formula>ServiceTerritory.ParentTerritory.Name</formula>
    <label>Parent Territory</label>
    <type>Text</type>
</CustomField>