unpackaged/main/default/objects/ServiceAppointment/fields/Parent_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory_ID__c</fullName>
    <description>This returns the internal ID for the Parent Territory</description>
    <formula>ServiceTerritory.ParentTerritoryId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the internal SF ID for the Parent Territory of the Service Territory</inlineHelpText>
    <label>Parent Territory ID</label>
    <type>Text</type>
</CustomField>