unpackaged/main/default/objects/ServiceAppointment/fields/Passengers__c.field-meta.xml
<CustomField>
    <fullName>Passengers__c</fullName>
    <formula>Work_Order__r.Number_Of_Passengers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passengers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>