unpackaged/main/default/objects/ServiceAppointment/fields/Payment_Required_Flag__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required_Flag__c</fullName>
    <formula>IF(
  (RecordType.DeveloperName == &#39;Breakdown&#39; &amp;&amp; Payment_Required__c) ||
  (RecordType.DeveloperName == &#39;Tow&#39; &amp;&amp; FSL__Related_Service__r.Payment_Required__c),

  &#39;TRUE&#39;, &#39;FALSE&#39;
)</formula>
    <label>Payment Required Flag</label>
    <type>Text</type>
</CustomField>