unpackaged/main/default/objects/ServiceAppointment/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>&quot;(&quot; + LEFT( Work_Order__r.WO_Member_Phone_Number__c, 3) + &quot;) &quot; + MID(Work_Order__r.WO_Member_Phone_Number__c, 4, 3) + &quot;-&quot; + MID(Work_Order__r.WO_Member_Phone_Number__c, 7, 4)</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>