unpackaged/main/default/objects/ServiceAppointment/fields/Potential_Issue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Issue</label>
    <type>Checkbox</type>
</CustomField>