unpackaged/main/default/objects/ServiceAppointment/fields/Potential_Issue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Potential_Issue_Reason__c</fullName>
    <label>Potential Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Scheduled</fullName>
            </value>
            <value>
                <fullName>Not Geo-Coded</fullName>
            </value>
            <value>
                <fullName>Contractor Driver Needs Help</fullName>
            </value>
            <value>
                <fullName>Fleet Driver Needs Help</fullName>
            </value>
            <value>
                <fullName>Message Received</fullName>
            </value>
            <value>
                <fullName>Facility Declined</fullName>
            </value>
            <value>
                <fullName>Non-Tech Facility Not Notified</fullName>
            </value>
            <value>
                <fullName>En Route Violation</fullName>
            </value>
            <value>
                <fullName>In Tow Violation</fullName>
            </value>
            <value>
                <fullName>Tow Loaded Violation</fullName>
            </value>
            <value>
                <fullName>Cleared Violation</fullName>
            </value>
            <value>
                <fullName>Late/Delay</fullName>
            </value>
            <value>
                <fullName>ETA Violation</fullName>
            </value>
            <value>
                <fullName>Dispatch Violation</fullName>
            </value>
            <value>
                <fullName>Priority - Late/Delay</fullName>
            </value>
            <value>
                <fullName>Driver Decline</fullName>
            </value>
            <value>
                <fullName>Driver Needs Help</fullName>
            </value>
            <value>
                <fullName>Landline Facility</fullName>
            </value>
            <value>
                <fullName>Cannot Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>