unpackaged/main/default/objects/ServiceAppointment/fields/Priority_Points__c.field-meta.xml
<CustomField>
    <fullName>Priority_Points__c</fullName>
    <formula>CASE(Scheduling_Policy_Name__c,
  &quot;Emergency&quot;,25,
  &quot;High priority&quot;,12,
   0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>