unpackaged/main/default/objects/ServiceAppointment/fields/Priority_Subject__c.field-meta.xml
<CustomField>
    <fullName>Priority_Subject__c</fullName>
    <formula>If((Work_Order_Priority__c == &#39;Critical&#39;), &#39;Emergency &#39; +  Subject , Subject)</formula>
    <label>Subject</label>
    <type>Text</type>
</CustomField>