unpackaged/main/default/objects/ServiceAppointment/fields/PTA_ATA_Differential__c.field-meta.xml
<CustomField>
    <fullName>PTA_ATA_Differential__c</fullName>
    <formula>ABS( PTA__c -  ActualStartTime )*1440</formula>
    <label>PTA-ATA Differential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>