unpackaged/main/default/objects/ServiceAppointment/fields/PTA_score__c.field-meta.xml
<CustomField>
    <fullName>PTA_score__c</fullName>
    <formula>(NOW() - PTA__c)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTA score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>