unpackaged/main/default/objects/ServiceAppointment/fields/pta_test__c.field-meta.xml
<CustomField>
    <fullName>pta_test__c</fullName>
    <formula>&#39;Minutes -&gt;&#39; &amp; TEXT(ROUND( (PTA__c - CreatedDate) *24*60, 0) ) &amp;
&#39;Hours -&gt;&#39; &amp; TEXT(ROUND( (PTA__c -CreatedDate) *24, 0) ) &amp;
&#39;Days -&gt;&#39; &amp; TEXT(ROUND( (PTA__c - CreatedDate), 0 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pta test</label>
    <type>Text</type>
</CustomField>