unpackaged/main/default/objects/ServiceAppointment/fields/PTA_Violation__c.field-meta.xml
<CustomField>
    <fullName>PTA_Violation__c</fullName>
    <formula>IF
(
AND(
SchedStartTime &gt; PTA__c, 
OR(
ISPICKVAL(Status, &#39;Scheduled&#39;), ISPICKVAL(Status, &#39;Dispatched&#39;), ISPICKVAL(Status,&#39;En Route&#39;)
),
RecordType.Name = &#39;Breakdown&#39;
), 
true, 
false
)</formula>
    <label>PTA Violation</label>
    <type>Checkbox</type>
</CustomField>