unpackaged/main/default/objects/ServiceAppointment/fields/PTA_Violation_Detail__c.field-meta.xml
<CustomField>
    <fullName>PTA_Violation_Detail__c</fullName>
    <description>This field is hidden from the page layout, it is used for the flow &quot;SchedStartTime PTA Case creation from SA&quot; as violation indicator.</description>
    <label>PTA Violation Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PTA+14</fullName>
            </value>
            <value>
                <fullName>PTA+29</fullName>
            </value>
            <value>
                <fullName>PTA+44</fullName>
            </value>
            <value>
                <fullName>PTA+59</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>