unpackaged/main/default/objects/ServiceAppointment/fields/RAP_Brand__c.field-meta.xml
<CustomField>
    <fullName>RAP_Brand__c</fullName>
    <label>RAP Brand</label>
    <length>40</length>
    <type>Text</type>
</CustomField>