unpackaged/main/default/objects/ServiceAppointment/fields/RAP_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>RAP_Case_Number__c</fullName>
    <formula>Work_Order__r.RAP_Case_Number__c</formula>
    <label>RAP Case Number</label>
    <type>Text</type>
</CustomField>