unpackaged/main/default/objects/ServiceAppointment/fields/RAP_Verified__c.field-meta.xml
<CustomField>
    <fullName>RAP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RAP Verified</label>
    <type>Checkbox</type>
</CustomField>