unpackaged/main/default/objects/ServiceAppointment/fields/Resource_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Resource_Latitude__c</fullName>
    <label>Resource Latitude</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>