unpackaged/main/default/objects/ServiceAppointment/fields/Resource_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Resource_Longitude__c</fullName>
    <label>Resource Longitude</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>