unpackaged/main/default/objects/ServiceAppointment/fields/SA_Created_Date_Reporting__c.field-meta.xml
<CustomField>
    <fullName>SA_Created_Date_Reporting__c</fullName>
    <description>This is for reporting only.  This presents the created in reports as a date and time</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Created Date Reporting</label>
    <type>DateTime</type>
</CustomField>