unpackaged/main/default/objects/ServiceAppointment/fields/SA_Last_Modified_Date_Reporting__c.field-meta.xml
<CustomField>
    <fullName>SA_Last_Modified_Date_Reporting__c</fullName>
    <description>This is for reporting only.  This presents the Last Modified in reports as a date and time</description>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA Last Modified Date Reporting</label>
    <type>DateTime</type>
</CustomField>