unpackaged/main/default/objects/ServiceAppointment/fields/Safety_Check_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Safety_Check_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Check Documentation</label>
    <type>Checkbox</type>
</CustomField>