unpackaged/main/default/objects/ServiceAppointment/fields/Schedule_Delta__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Delta__c</fullName>
    <label>Minutes to Add</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>