unpackaged/main/default/objects/ServiceAppointment/fields/Schedule_Overridden_By__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Overridden_By__c</fullName>
    <description>Denotes if the schedule was manually overridden by the Club or Facility Dispatcher</description>
    <label>Override Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>