unpackaged/main/default/objects/ServiceAppointment/fields/Schedule_Overriden__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Overriden__c</fullName>
    <formula>OR(NOT(ISBLANK( Manual_Override_Reason__c )), AND(isScheduledByDispatcher__c = TRUE, AutoScheduled__c = TRUE))</formula>
    <label>Schedule Overriden</label>
    <type>Checkbox</type>
</CustomField>