unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Actual_Arrival_Differential2__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Actual_Arrival_Differential2__c</fullName>
    <formula>ABS( SchedStartTime - ActualStartTime)*1440</formula>
    <label>Scheduled-Actual Arrival Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>