unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Actual_Arrival_Differential__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Actual_Arrival_Differential__c</fullName>
    <formula>ABS(  Original_Scheduled_Start__c    - ActualStartTime)*1440</formula>
    <label>Orig Sched-Actual Arrival Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>