unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_by_Autoschedule_Retry_Batch__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_by_Autoschedule_Retry_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled by Autoschedule Retry Batch</label>
    <type>Checkbox</type>
</CustomField>