unpackaged/main/default/objects/ServiceAppointment/fields/Scheduled_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Timestamp__c</fullName>
    <label>Scheduled Timestamp</label>
    <type>DateTime</type>
</CustomField>