unpackaged/main/default/objects/ServiceAppointment/fields/ScheduledEnd_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>ScheduledEnd_Lightbox__c</fullName>
    <formula>SchedEndTime</formula>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>