unpackaged/main/default/objects/ServiceAppointment/fields/ScheduledStart_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>ScheduledStart_Lightbox__c</fullName>
    <formula>SchedStartTime</formula>
    <label>Scheduled Start</label>
    <type>DateTime</type>
</CustomField>