unpackaged/main/default/objects/ServiceAppointment/fields/Scheduling_Policy_Name__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy_Name__c</fullName>
    <formula>FSL__Scheduling_Policy_Used__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Policy Name</label>
    <type>Text</type>
</CustomField>