unpackaged/main/default/objects/ServiceAppointment/fields/Service_resource_userid__c.field-meta.xml
<CustomField>
    <fullName>Service_resource_userid__c</fullName>
    <formula>Service_Resource__r.RelatedRecord.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service resource userid</label>
    <type>Text</type>
</CustomField>