unpackaged/main/default/objects/ServiceAppointment/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <formula>RIGHT(ServiceTerritory.Name,(LEN( ServiceTerritory.Name)-FIND(&quot;-&quot;, ServiceTerritory.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Territory Name</label>
    <type>Text</type>
</CustomField>