unpackaged/main/default/objects/ServiceAppointment/fields/ServiceAppointment_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>ServiceAppointment_Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakdown Location</fullName>
            </value>
            <value>
                <fullName>Tow Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>