unpackaged/main/default/objects/ServiceAppointment/fields/ServiceTerritoryId__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritoryId__c</fullName>
    <formula>ServiceTerritory.Id</formula>
    <label>ServiceTerritoryId</label>
    <type>Text</type>
</CustomField>