unpackaged/main/default/objects/ServiceAppointment/fields/Servicing_Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Technology_Type__c</fullName>
    <description>Mirrors the parent work order servicing Technology type for use from triggers</description>
    <formula>Work_Order__r.Servicing_Technology_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing Technology Type</label>
    <type>Text</type>
</CustomField>