unpackaged/main/default/objects/ServiceAppointment/fields/SLR_En_Route_Miles__c.field-meta.xml
<CustomField>
    <fullName>SLR_En_Route_Miles__c</fullName>
    <label>SLR En Route Miles</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>