unpackaged/main/default/objects/ServiceAppointment/fields/SLR_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>SLR_Tow_Miles__c</fullName>
    <label>SLR Tow Miles</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>