unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Call_Created__c.field-meta.xml
<CustomField>
    <fullName>SMS_Call_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS sent when the call is created</description>
    <inlineHelpText>SMS sent when the call is created</inlineHelpText>
    <label>SMS - Call Created</label>
    <type>Checkbox</type>
</CustomField>