unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>SMS_Dispatch__c</fullName>
    <formula>IF(ISBLANK(Service_Resource__r.Tracker_Contact_old__c),FALSE,TRUE)</formula>
    <label>SMS Dispatch</label>
    <type>Checkbox</type>
</CustomField>