unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Driver_En_Route__c.field-meta.xml
<CustomField>
    <fullName>SMS_Driver_En_Route__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS sent when driver updates the Service Appointment Status to &quot;En Route&quot;</description>
    <inlineHelpText>SMS sent when driver updates the Service Appointment Status to &quot;En Route&quot;</inlineHelpText>
    <label>SMS - Driver En Route</label>
    <type>Checkbox</type>
</CustomField>