unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Driver_On_Location__c.field-meta.xml
<CustomField>
    <fullName>SMS_Driver_On_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SMS sent when driver updates the Service Appointment Status to &quot;On Location&quot;</description>
    <inlineHelpText>SMS sent when driver updates the Service Appointment Status to &quot;On Location&quot;</inlineHelpText>
    <label>SMS - Driver On Location</label>
    <type>Checkbox</type>
</CustomField>