unpackaged/main/default/objects/ServiceAppointment/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <formula>If (Contact.Sms_Optin__c = true, &#39;True&#39;, &#39;False&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Opt-In</label>
    <type>Text</type>
</CustomField>