unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOBreakdownAddress__c.field-meta.xml
<CustomField>
    <fullName>SMSWOBreakdownAddress__c</fullName>
    <formula>Work_Order__r.Breakdown_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOBreakdownAddress</label>
    <type>Text</type>
</CustomField>