unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOMembershipLevel__c.field-meta.xml
<CustomField>
    <fullName>SMSWOMembershipLevel__c</fullName>
    <formula>Work_Order__r.Membership_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOMembershipLevel</label>
    <type>Text</type>
</CustomField>