unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOMobile__c.field-meta.xml
<CustomField>
    <fullName>SMSWOMobile__c</fullName>
    <formula>Work_Order__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOMobile</label>
    <type>Text</type>
</CustomField>