unpackaged/main/default/objects/ServiceAppointment/fields/SMSWorkOrderCallId__c.field-meta.xml
<CustomField>
    <fullName>SMSWorkOrderCallId__c</fullName>
    <formula>Work_Order__r.Call_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWorkOrderCallId</label>
    <type>Text</type>
</CustomField>