unpackaged/main/default/objects/ServiceAppointment/fields/SMSWorkOrderName__c.field-meta.xml
<CustomField>
    <fullName>SMSWorkOrderName__c</fullName>
    <formula>Work_Order__r.Work_Type_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWorkOrderName</label>
    <type>Text</type>
</CustomField>