unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOTCode__c.field-meta.xml
<CustomField>
    <fullName>SMSWOTCode__c</fullName>
    <formula>Work_Order__r.T_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOTCode</label>
    <type>Text</type>
</CustomField>