unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOTowAddress__c.field-meta.xml
<CustomField>
    <fullName>SMSWOTowAddress__c</fullName>
    <formula>Work_Order__r.Tow_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOTowAddress</label>
    <type>Text</type>
</CustomField>