unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOTowDestinationName__c.field-meta.xml
<CustomField>
    <fullName>SMSWOTowDestinationName__c</fullName>
    <formula>Work_Order__r.Tow_Destination_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOTowDestinationName</label>
    <type>Text</type>
</CustomField>