unpackaged/main/default/objects/ServiceAppointment/fields/SMSWOVehicleProfile__c.field-meta.xml
<CustomField>
    <fullName>SMSWOVehicleProfile__c</fullName>
    <formula>Work_Order__r.Vehicle_Profile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMSWOVehicleProfile</label>
    <type>Text</type>
</CustomField>